Closed
Bug 185714
Opened 23 years ago
Closed 22 years ago
[IMAGE] EMBED child of OBJECT shows no contextual menu
Categories
(Core :: DOM: Events, defect, P3)
Core
DOM: Events
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: bouil, Assigned: bzbarsky)
References
()
Details
(Keywords: testcase)
Attachments
(2 files)
|
22 bytes,
text/html
|
Details | |
|
2.12 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2.1) Gecko/20021210 Debian/1.2.1-3
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2.1) Gecko/20021210 Debian/1.2.1-3
On the bottom of this page
http://clx.anet.fr/spip/article.php3?id_article=155
is placed an MNG animation.
When i right-click on this animation, i haven't the expected popup menu.
Reproducible: Always
Steps to Reproduce:
1. Go to http://clx.anet.fr/spip/article.php3?id_article=155 at the bottom
2. Right clic on the image of the sinus function.
3. And... no popup menu as expected
Actual Results:
Nothing.
Expected Results:
Popup menu for saving image, block image from server and so on.
Only tested with Chrome theme.
Comment 1•23 years ago
|
||
the MNG is included via <object><embed="foo.mng"></embed></object>
for a testcase, see attachment 103143 [details]
==> plugins
marking NEW
Assignee: pavlov → beppe
Status: UNCONFIRMED → NEW
Component: Image: Layout → Plug-ins
Ever confirmed: true
Keywords: testcase
QA Contact: tpreston → shrir
Summary: Right clic on MNG gives no popup menu → Right clic on MNG gives no popup menu
Comment 3•23 years ago
|
||
I think we are registering DOM listeners when we don't need to....
OS: Linux → All
Priority: -- → P3
Target Milestone: --- → mozilla1.4alpha
Updated•23 years ago
|
Summary: Right clic on MNG gives no popup menu → Right click on MNG gives no popup menu
This doesn't appear to have anything to do with MNG. The URL from comment 1
demonstrates GIF EMBEDs inside OBJECTs showing no contextual menu.
Does this belong on XP Toolkit/Widgets: Menus instead, Peter?
Hardware: PC → All
Summary: Right click on MNG gives no popup menu → EMBED child of OBJECT shows no contextual menu
Comment 5•23 years ago
|
||
I set a breakpoint where the plugin listens for events and I'm not getting any
(on Win32) and I'm not getting a context menu either.
-->punting, feel free to bounce back
Assignee: peterl → hyatt
Component: Plug-ins → XP Toolkit/Widgets: Menus
Summary: EMBED child of OBJECT shows no contextual menu → [IMAGE] EMBED child of OBJECT shows no contextual menu
Comment 6•23 years ago
|
||
This is not a hyatt bug. In fact, hyatt no longer owns XPToolkit as far as the
module ownership database (http://despot.mozilla.org/despot.cgi, from which
http://www.mozilla.org/owners.html is generated), so he shouldn't own this
bugzilla component, unless he wants to. Bryner is the new module owner, cc'ing
him and Asa.
/be
Comment 7•23 years ago
|
||
okay, I think I see part of the problem here but I'm not sure who is the right
owner.
First, I wasn't getting any context menu events because the
nsPluginDOMContextMenuListener in nsObjectFrame.cpp was consuming them. We
should probably not register this listener in the case of non-plugins.
Second, it doesn't look like the context menu code in nsContextMenu.js knows
anything about EMBED tags. It looks like the OBJECT tag support could possibly
be extended here:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xpfe/communicator/resources/content/nsContextMenu.js#289
Comment 8•23 years ago
|
||
I hit this bug, and it looks to me that this isn't an image-specific bug..
the attached testcase show the bug
| Assignee | ||
Comment 9•22 years ago
|
||
So the main problem seems to be that this code uses AddEventListener() to add a
_capturing_ listener then uses RemoveEventListenerByIID to remove it. Which
leads to a few problems:
1) RemoveEventListenerByIID can't remove a capturing listener
2) If a bubbling listener for "contextmenu" is used, the subtype
RemoveEventListenerByIID uses is "none", so it doesn't remove the listener
properly either.
I'm not sure why we're using these two different methods (and why
RemoveEventListenerByIID exists at all, for that matter).
Component: XP Toolkit/Widgets: Menus → DOM: Events
| Assignee | ||
Comment 10•22 years ago
|
||
This fixes the bug modulo bug 242301
| Assignee | ||
Updated•22 years ago
|
Attachment #147470 -
Flags: superreview?(jst)
Attachment #147470 -
Flags: review?(jst)
Comment 11•22 years ago
|
||
Comment on attachment 147470 [details] [diff] [review]
Patch
r+sr=jst
Attachment #147470 -
Flags: superreview?(jst)
Attachment #147470 -
Flags: superreview+
Attachment #147470 -
Flags: review?(jst)
Attachment #147470 -
Flags: review+
| Assignee | ||
Updated•22 years ago
|
Assignee: hyatt → bzbarsky
Target Milestone: mozilla1.4alpha → mozilla1.8alpha
| Assignee | ||
Comment 12•22 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 13•22 years ago
|
||
Camino may need a follow-on bug for this. Needs testing with this patch included.
Target Milestone: mozilla1.8alpha → mozilla1.4alpha
| Assignee | ||
Comment 14•22 years ago
|
||
Please don't touch the Target Milestone settings on my bugs, Greg. If Camino
needs a bug, feel free to file one on Camino.
Target Milestone: mozilla1.4alpha → mozilla1.8alpha
Comment 15•22 years ago
|
||
Whoops, sorry about that. Must’ve done that accidentally, didn’t intend to.
You need to log in
before you can comment on or make changes to this bug.
Description
•