Properly remove the context menu listener when we don't have a plugin.  Bug 185714, r+sr=jst